--- a/views/html/KOR/privacy.html
+++ b/views/html/KOR/privacy.html
@@ -17,7 +17,7 @@
         <meta property="og:site_name" content="" >
         <meta property="og:title" content="한-아랍 스타트업 아이디어 공모전">
         <meta property="og:description" content="아랍 지역 진출을 희망하는 혁신 스타트업 운영자 및 관련 아이디어를 가진 예비 창업자를 위한 아이디어 공모전">
-        <meta property="og:image" content="../../content/images/share.png">
+        <meta property="og:image" content="../../../content/images/share.png">
         <meta property="og:image:width" content="600">
         <meta property="og:image:height" content="315">
         
@@ -27,13 +27,13 @@
         <meta property="twitter:description" content="">
         <meta property="twitter:image" content="./../content/images/share.png">
 
-        <link rel="shortcut icon" type="image/x-icon" href="../../content/images/favicon.ico"> <!-- Chrome, Safari, IE -->
-        <link rel="icon" type="image/png" href="../../content/images/favicon.png"> <!-- Firefox, Opera -->
+        <link rel="shortcut icon" type="image/x-icon" href="../../../content/images/favicon.ico"> <!-- Chrome, Safari, IE -->
+        <link rel="icon" type="image/png" href="../../../content/images/favicon.png"> <!-- Firefox, Opera -->
 
-        <link href="../../content/styles/style.css" rel="stylesheet">
-        <link href="../../content/styles/content.css" rel="stylesheet">
+        <link href="../../../content/styles/style.css" rel="stylesheet">
+        <link href="../../../content/styles/content.css" rel="stylesheet">
 
-        <script src="../../content/scripts/jquery-3.5.1.min.js"></script>
+        <script src="../../../content/scripts/jquery-3.5.1.min.js"></script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179241450-13"></script>
@@ -60,7 +60,7 @@
         <!-- //header END -->
         <!-- sub START -->
         <section>
-            <div class="grid1170">
+            <div class="grid1100">
                 <div class="policy-wrap">
                     <p class="policy-txt fs20">한-아랍 스타트업 아이디어 공모전 (이하 '운영국'이라 합니다.) 는 이용자의 개인정보를 중요시하며, 「정보통신망 이용촉진 및 정보보호 등에 관한 법률」, 「개인정보보호법」을 준수하기 위하여 노력하고 있습니다.<br>운영국은 개인정보처리방침을 통하여 운영국이 이용자로부터 제공받은 개인정보를 어떠한 용도와 방식으로 이용하고 있으며, 개인정보보호를 위해 어떠한 조치를 취하고 있는지 알려드립니다.</p>
                 </div>
@@ -139,7 +139,7 @@
         <!-- footer START -->
         <footer></footer>
         <!-- //footer END -->
-        <script src="../../content/scripts/common.js"></script>
+        <script src="../../../content/scripts/common.js"></script>
     
         <!-- Google Tag Manager (noscript) -->
         <noscript>
