--- a/views/html/KOR/apply.html
+++ b/views/html/KOR/apply.html
@@ -17,7 +17,7 @@
         <meta property="og:site_name" content="" >
         <meta property="og:title" content="한-아랍 스타트업 아이디어 공모전">
         <meta property="og:description" content="아랍 지역 진출을 희망하는 혁신 스타트업 운영자 및 관련 아이디어를 가진 예비 창업자를 위한 아이디어 공모전">
-        <meta property="og:image" content="../../content/images/share.png">
+        <meta property="og:image" content="../../../content/images/share.png">
         <meta property="og:image:width" content="600">
         <meta property="og:image:height" content="315">
         
@@ -27,13 +27,13 @@
         <meta property="twitter:description" content="">
         <meta property="twitter:image" content="./../content/images/share.png">
 
-        <link rel="shortcut icon" type="image/x-icon" href="../../content/images/favicon.ico"> <!-- Chrome, Safari, IE -->
-        <link rel="icon" type="image/png" href="../../content/images/favicon.png"> <!-- Firefox, Opera -->
+        <link rel="shortcut icon" type="image/x-icon" href="../../../content/images/favicon.ico"> <!-- Chrome, Safari, IE -->
+        <link rel="icon" type="image/png" href="../../../content/images/favicon.png"> <!-- Firefox, Opera -->
 
-        <link href="../../content/styles/style.css" rel="stylesheet">
-        <link href="../../content/styles/content.css" rel="stylesheet">
+        <link href="../../../content/styles/style.css" rel="stylesheet">
+        <link href="../../../content/styles/content.css" rel="stylesheet">
 
-        <script src="../../content/scripts/jquery-3.5.1.min.js"></script>
+        <script src="../../../content/scripts/jquery-3.5.1.min.js"></script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179241450-13"></script>
@@ -543,7 +543,7 @@
                         </div>
                     </div> <!-- //form wrap : 동의 -->
                 </form> <!-- //form -->
-                <div class="pagination__btn">
+                <div class="pagination__btn flex-spc__btw">
                     <a href="javascript:void(0);" class="paging-btn__secondary w-pct__49" onclick="alert('임시저장 되었습니다.')">임시 저장</a>
                     <a href="javascript:void(0);" class="paging-btn__primary w-pct__49" onclick="confirm('최종 제출하시겠습니까?\n최종 제출된 지원서는 수정할 수 없습니다.')">최종 제출</a>
                 </div> <!-- //pagination : button type -->
@@ -554,7 +554,7 @@
         <footer></footer>
         <!-- //footer END -->
         
-        <script src="../../content/scripts/common.js"></script>
+        <script src="../../../content/scripts/common.js"></script>
         <script>
             $(document).ready(function(){
                 //textarea counter event
