--- a/content/styles/content.css
+++ b/content/styles/content.css
@@ -1,9 +1,42 @@
 @charset "utf-8";
 
 /*============================================================
+common content style
+============================================================*/
+section {
+    padding: 6.5rem 0;
+}
+figure {
+    position: relative;
+}
+.lang-cont__eng {
+    display: none;
+}
+/* button
+============================================================*/
+[class^="cmn-btn__"] {
+    display: inline-block;
+    position: absolute;
+    width: 5.9%;
+    /* background-color: rgba(255, 0, 0, 0.5); */
+}
+.cmn-btn__lang-kor {
+    right: 6.27%;
+}
+.cmn-btn__lang-eng {
+    right: 0;
+}
+
+/*============================================================
 header
 ============================================================*/
-
+header {
+    background: url("../images/common/sub-visual-background.png") no-repeat center top; 
+}
+header [class^="cmn-btn__lang"] {
+    top: 7.73%;
+    height: 7.5%;
+}
 
 /*============================================================
 footer
@@ -19,20 +52,6 @@ footer {
 }
 
 /*============================================================
-common content style
-============================================================*/
-figure {
-    position: relative;
-}
-/* button
-============================================================*/
-[class^="cmn-btn__"] {
-    display: inline-block;
-    position: absolute;
-    /* background-color: rgba(255, 0, 0, 0.5); */
-}
-
-/*============================================================
 main
 ============================================================*/
 /* visual
@@ -40,16 +59,9 @@ main
 .vsl-area {
     background: url("../images/common/visual-background.png");
 }
-[class^="cmn-btn__lang"] {
+.vsl-area [class^="cmn-btn__lang"] {
     top: 2.15%;
-    width: 5.9%;
     height: 2.5%;
-}
-.cmn-btn__lang-kor {
-    right: 6.27%;
-}
-.cmn-btn__lang-eng {
-    right: 0;
 }
 /* intro
 ============================================================*/
@@ -80,6 +92,45 @@ main
 }
 [class^="tab-cont__"] {
     display: none;
+}
+/* login modal
+============================================================*/
+[class^="modal-btn__login"] {
+    margin-top: 0.5rem;
+    min-width: 18rem;
+}
+[class^="modal-btn__login"] .label {
+    display: inline-block;
+    padding: 1.25rem 0 1.25rem 2rem;
+    background-repeat: no-repeat;
+    background-position: center left;
+    background-size: 1.5rem;
+}
+.modal-btn__login-kakao {
+    background-color: #ffdd00;
+}
+.modal-btn__login-kakao .label {
+    color: #412e34;
+    background-image: url("../images/common/modal-login-kakao.png");
+}
+.modal-btn__login-naver {
+    background-color: #03c75a;
+}
+.modal-btn__login-naver .label {
+    color: #fff;
+    background-image: url("../images/common/modal-login-naver.png");
+}
+
+@media screen and (max-width: 575.98px) {
+    [class^="modal-btn__login"] {
+        margin-top: 1rem;
+        min-width: initial;
+        width: 100%;
+    }
+    [class^="modal-btn__login"] .label {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
 }
 
 /*============================================================
