--- a/views/html/apply.html
+++ b/views/html/apply.html
@@ -60,7 +60,9 @@
             <div class="grid1100">
                 <figure>
                     <img src="../../content/images/kor/sub-visual-image.png" alt="한-아랍 스타트업 아이디어 공모전 | 공모기간 : 2021.7.5(Mon) ~ 2021.8.31(Tue) 16:00" class="lang-cont__kor">
-                </figure>
+                    <img src="../../content/images/eng/sub-visual-image.png" alt="Korea-Arab
+                    Startup Pitch Competition : Jul 5(Mon), 2021 ~ Aug 31(Tue), 2021" class="lang-cont__eng">
+                </figure> <!-- 0702 zoe 수정 -->
                 <a href="javascript:void(0);" class="cmn-btn__lang-kor" onclick="showLangCont('kor');"><span class="txt-hidden">국문 페이지 보기 버튼</span></a>
                 <a href="javascript:void(0);" class="cmn-btn__lang-eng" onclick="showLangCont('eng');"><span class="txt-hidden">영문 페이지 보기 버튼</span></a>
             </div>
@@ -203,7 +205,7 @@
                                             </div>
                                             <div class="form-el-row">
                                                 <p class="form-tip txt-indent"><i class="mark">※</i>업로드 가능 확장자 :  jpg,png,pdf / 용량 10MB 이내</p>
-                                                <p class="form-tip txt-indent"><i class="mark">※</i>파일명에 온점 "."이 들어가면 정확한 확장자를 인식하지 못하여 파일이 업로드 되지 않습니다.<br>예) 01.사엄자등록증.pdf (X)  01_사업자등록증.pdf (O)</p>
+                                                <p class="form-tip txt-indent"><i class="mark">※</i>파일명에 온점 "."이 들어가면 정확한 확장자를 인식하지 못하여 파일이 업로드 되지 않습니다.<br>예) 01.사업자등록증.pdf (X)  01_사업자등록증.pdf (O)</p> <!-- 0702 zoe 수정 -->
                                             </div>
                                         </div>
                                     </div>
@@ -311,7 +313,7 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="form-el-wrap__row">
-                                        <label class="form-el-label" for="applyPosition">직위</label>
+                                        <label class="form-el-label" for="applyPosition">직위 (선택)</label> <!-- 0702 zoe 수정 -->
                                         <div class="form-el-box">
                                             <input type="text" class="form-el form-input-txt" id="applyPosition">
                                         </div>
@@ -377,7 +379,7 @@
                                                 <input type="tel" class="form-el form-input-txt w-pct__49" title="first member's tel" maxlength="11" placeholder="연락처 / -은 빼고 입력해주세요.">
                                             </div>
                                             <div class="form-el-row flex-box flex-spc__btw">
-                                                <input type="text" class="form-el form-input-txt w-pct__32" title="first member's position" placeholder="직위 또는 소속">
+                                                <input type="text" class="form-el form-input-txt w-pct__32" title="first member's position" placeholder="소속 및 직위"> <!-- 0702 zoe 수정 : 팀원 입력 폼 모두에 적용 -->
                                                 <input type="text" class="form-el form-input-txt w-pct__66" title="first member's role" placeholder="팀 내 역할">
                                             </div>
                                         </div>
@@ -393,7 +395,7 @@
                                                 <input type="tel" class="form-el form-input-txt w-pct__49" title="second member's tel" maxlength="11" placeholder="연락처 / -은 빼고 입력해주세요.">
                                             </div>
                                             <div class="form-el-row flex-box flex-spc__btw">
-                                                <input type="text" class="form-el form-input-txt w-pct__32" title="second member's position" placeholder="직위 또는 소속">
+                                                <input type="text" class="form-el form-input-txt w-pct__32" title="second member's position" placeholder="소속 및 직위">
                                                 <input type="text" class="form-el form-input-txt w-pct__66" title="second member's role" placeholder="팀 내 역할">
                                             </div>
                                         </div>
@@ -409,7 +411,7 @@
                                                 <input type="tel" class="form-el form-input-txt w-pct__49" title="third member's tel" maxlength="11" placeholder="연락처 / -은 빼고 입력해주세요.">
                                             </div>
                                             <div class="form-el-row flex-box flex-spc__btw">
-                                                <input type="text" class="form-el form-input-txt w-pct__32" title="third member's position" placeholder="직위 또는 소속">
+                                                <input type="text" class="form-el form-input-txt w-pct__32" title="third member's position" placeholder="소속 및 직위">
                                                 <input type="text" class="form-el form-input-txt w-pct__66" title="third member's role" placeholder="팀 내 역할">
                                             </div>
                                         </div>
@@ -425,7 +427,7 @@
                                                 <input type="tel" class="form-el form-input-txt w-pct__49" title="fourth member's tel" maxlength="11" placeholder="연락처 / -은 빼고 입력해주세요.">
                                             </div>
                                             <div class="form-el-row flex-box flex-spc__btw">
-                                                <input type="text" class="form-el form-input-txt w-pct__32" title="fourth member's position" placeholder="직위 또는 소속">
+                                                <input type="text" class="form-el form-input-txt w-pct__32" title="fourth member's position" placeholder="소속 및 직위">
                                                 <input type="text" class="form-el form-input-txt w-pct__66" title="fourth member's role" placeholder="팀 내 역할">
                                             </div>
                                         </div>
@@ -441,7 +443,7 @@
                                                 <input type="tel" class="form-el form-input-txt w-pct__49" title="last member's tel" maxlength="11" placeholder="연락처 / -은 빼고 입력해주세요.">
                                             </div>
                                             <div class="form-el-row flex-box flex-spc__btw">
-                                                <input type="text" class="form-el form-input-txt w-pct__32" title="last member's position" placeholder="직위 또는 소속">
+                                                <input type="text" class="form-el form-input-txt w-pct__32" title="last member's position" placeholder="소속 및 직위">
                                                 <input type="text" class="form-el form-input-txt w-pct__66" title="last member's role" placeholder="팀 내 역할">
                                             </div>
                                         </div>
@@ -797,7 +799,7 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="form-el-wrap__row">
-                                        <label class="form-el-label" for="applyPositionEng">Position</label>
+                                        <label class="form-el-label" for="applyPositionEng">Position (optional)</label> <!-- 0702 zoe 수정 -->
                                         <div class="form-el-box">
                                             <input type="text" class="form-el form-input-txt" id="applyPositionEng">
                                         </div>
