--- a/views/html/index.html
+++ b/views/html/index.html
@@ -61,6 +61,8 @@
                 <div class="grid1100">
                     <figure>
                         <img src="../../content/images/kor/visual-image.png" alt="한-아랍 스타트업 아이디어 공모전 | 공모기간 : 2021.7.5(Mon) ~ 2021.8.31(Tue) 16:00" class="lang-cont__kor">
+                        <img src="../../content/images/eng/visual-image.png" alt="Korea-Arab
+                        Startup Pitch Competition | Jul 5(Mon), 2021 ~ Aug 31(Tue), 2021" class="lang-cont__eng"> <!-- 0702 zoe 추가 -->
                     </figure>
                     <a href="javascript:void(0);" class="cmn-btn__lang-kor" onclick="showLangCont('kor');"><span class="txt-hidden">국문 페이지 보기 버튼</span></a>
                     <a href="javascript:void(0);" class="cmn-btn__lang-eng" onclick="showLangCont('eng');"><span class="txt-hidden">영문 페이지 보기 버튼</span></a>
@@ -73,8 +75,15 @@
                             <img src="../../content/images/kor/iintro-image.png" alt="한-아랍 스타트업 아이디어 공모전 소개 문구 이미지">
                         </figure>
                         <a href="http://www.korea-arab.org/" target="_blank" title="한국-아랍 소사이어티 홈페이지로 이동하기 (새 창 이동)" class="cmn-btn__homepage"><span class="txt-hidden">한국-아랍 소사이어티 홈페이지 이동 버튼</span></a>
-                        <a href="javascript:void(0);" class="cmn-btn__download"><span class="txt-hidden">아랍 시장 비즈니스 환경 자료 다운로드 버튼</span></a>
+                        <a href="https://youtu.be/jRheKPQDRwA" target="_blank" title="아랍 관련 비즈니스 세미나 시청하기 (새 창 이동)" class="cmn-btn__download"><span class="txt-hidden">아랍 관련 비즈니스 세미나 시청하기 버튼</span></a> <!-- 0702 zoe 수정 -->
                     </div>
+                    <div class="lang-cont__eng">
+                        <figure>
+                            <img src="../../content/images/eng/iintro-image.png" alt="한-아랍 스타트업 아이디어 공모전 소개 문구 이미지">
+                        </figure>
+                        <a href="http://www.korea-arab.org/" target="_blank" title="한국-아랍 소사이어티 홈페이지로 이동하기 (새 창 이동)" class="cmn-btn__homepage"><span class="txt-hidden">한국-아랍 소사이어티 홈페이지 이동 버튼</span></a>
+                        <a href="https://youtu.be/jRheKPQDRwA" target="_blank" title="아랍 관련 비즈니스 세미나 시청하기 (새 창 이동)" class="cmn-btn__download"><span class="txt-hidden">아랍 관련 비즈니스 세미나 시청하기 버튼</span></a>
+                    </div> <!-- 0702 zoe 추가 -->
                 </div> <!-- //grid -->
             </div> <!-- //intro area -->
             <div class="cont-area">
@@ -82,7 +91,7 @@
                     <div class="lang-cont__kor">
                         <ul class="tab-menu-list flex-box">
                             <li>
-                                <a href="javascript:void(0);" class="tab-menu active" onclick="showTabCont('about');">공모요강</a>
+                                <a href="javascript:void(0);" class="tab-menu active" onclick="showTabCont('about');">공모 요강</a> <!-- 0702 zoe 수정 -->
                             </li>
                             <li>
                                 <a href="javascript:void(0);" class="tab-menu" onclick="showTabCont('faq');">자주하는 질문</a>
@@ -126,8 +135,8 @@
                                         <strong class="faq-list-tit"><span class="idx">Q</span>외국인 팀원의 별도 참가 자격이 있을까요?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>한국에 거주하는 아랍 청년이라면 나이, 국적, 성별에 상관없이 누구나 참여 가능합니다.<br>지원 시, 해당 인원의 한국 거주를 증빙할 수 있는 서류를 반드시 제출해 주세요.</p>
-                                    </div>
+                                        <p>한국에 거주하는 아랍 청년이라면 나이, 국적, 성별에 상관없이 누구나 참여 가능합니다.<br>외국인 지원 시, 외국인 등록증 및 만료이전 비자를 필수로 제출해주시기 바랍니다.</p>
+                                    </div> <!-- 0702 zoe 수정 -->
                                 </li>
                                 <li>
                                     <button class="faq-list-tit-box active">
@@ -219,10 +228,10 @@
                                                 <div class="form-el-wrap__row">
                                                     <div class="form-chk__circ">
                                                         <input type="checkbox" id="qnaTermCheck">
-                                                        <label class="form-chk-label" for="qnaTermCheck">개인정보 수집.이용에 동의합니다.</label>
+                                                        <label class="form-chk-label" for="qnaTermCheck">개인정보 수집ㆍ이용에 동의합니다.</label> <!-- 0702 zoe 수정 -->
                                                     </div>
                                                     <div class="form-term-box mt30">
-                                                        <p>한국-아랍 소사이어티 운영국(이하 "운영국"이라 합니다)는 서비스 이용시 이용자로부터 아래와 같은 개인 정보를 수집하고 있습니다.<br><br>1. 수집하는 개인정보의 항목 및 이용목적<br>1) 수집항목 (필수)<br>-  이름, 이메일<br>2) 수집목적<br>- 이용자 문의 접수 및 답변<br><br>2. 개인정보의 보유 및 이용기간<br>회원의 개인정보는 원칙적으로 문의 답변 후 3개월 이후 지체 없이 파기합니다.<br><br>※ 귀하는 필수항목 수집·이용에 대한 동의를 거부하실 수 있으나, 이는 서비스 제공에 필수적으로 수집해야 하는 정보이므로, 동의를 거부하실 경우 문의를 이용하실 수 없습니다.</p>
+                                                        <p>한-아랍 스타트업 아이디어 공모전 운영국(이하 "운영국"이라 합니다)는 서비스 이용시 이용자로부터 아래와 같은 개인 정보를 수집하고 있습니다.<br><br>1. 수집하는 개인정보의 항목 및 이용목적<br>1) 수집항목 (필수)<br>-  이름, 이메일<br>2) 수집목적<br>- 이용자 문의 접수 및 답변<br><br>2. 개인정보의 보유 및 이용기간<br>회원의 개인정보는 원칙적으로 문의 답변 후 3개월 이후 지체 없이 파기합니다.<br><br>※ 귀하는 필수항목 수집·이용에 대한 동의를 거부하실 수 있으나, 이는 서비스 제공에 필수적으로 수집해야 하는 정보이므로, 동의를 거부하실 경우 문의를 이용하실 수 없습니다.</p> <!-- 0702 zoe 수정 -->
                                                     </div>
                                                 </div>
                                             </div>  
@@ -247,7 +256,10 @@
                                 <a href="javascript:void(0);" class="tab-menu" onclick="showTabCont('qna');">Q&amp;A</a>
                             </li>
                         </ul> <!-- //tab menu -->
-                        <figure class="tab-cont__about" style="display: block;"></figure>
+                        <figure class="tab-cont__about" style="display: block;">
+                            <img src="../../content/images/eng/about-image.png" alt="공모요강 소개 이미지">
+                            <a href="javascript:void(0);" class="cmn-btn__apply" onclick="openModal('modalLoginEng');"><span class="txt-hidden">Apply</span></a>
+                        </figure> <!-- 0702 zoe 수정 -->
                         <div class="tab-cont__faq">
                             <ul class="faq-list">
                                 <li>
@@ -279,8 +291,8 @@
                                         <strong class="faq-list-tit"><span class="idx">Q</span>Are foreign team members eligible to participate separately?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>Any young Arab living in Korea can participate regardless of age, nationality, or gender.<br>When applying, be sure to submit documents proving the person's legal residency in Korea.</p>
-                                    </div>
+                                        <p>Any young Arab living in Korea can participate regardless of age, nationality, or gender.<br>When applying for a foreigner, please submit your alien registration card and visa before expiration.</p>
+                                    </div> <!-- 0702 zoe 수정 -->
                                 </li>
                                 <li>
                                     <button class="faq-list-tit-box active">
