--- a/views/html/privacy.html
+++ b/views/html/privacy.html
@@ -60,7 +60,9 @@
             <div class="grid1100">
                 <figure>
                     <img src="../../content/images/kor/sub-visual-image.png" alt="한-아랍 스타트업 아이디어 공모전 | 공모기간 : 2021.7.5(Mon) ~ 2021.8.31(Tue) 16:00" class="lang-cont__kor">
-                </figure>
+                    <img src="../../content/images/eng/sub-visual-image.png" alt="Korea-Arab
+                    Startup Pitch Competition : Jul 5(Mon), 2021 ~ Aug 31(Tue), 2021" class="lang-cont__eng">
+                </figure> <!-- 0702 zoe 수정 -->
                 <a href="javascript:void(0);" class="cmn-btn__lang-kor" onclick="showLangCont('kor');"><span class="txt-hidden">국문 페이지 보기 버튼</span></a>
                 <a href="javascript:void(0);" class="cmn-btn__lang-eng" onclick="showLangCont('eng');"><span class="txt-hidden">영문 페이지 보기 버튼</span></a>
             </div>
