--- a/content/styles/content.css
+++ b/content/styles/content.css
@@ -31,7 +31,7 @@ figure {
 header
 ============================================================*/
 header {
-    background: url("../images/common/sub-visual-background.png") no-repeat center top; 
+    background: url("../images/common/sub-visual-background.png") no-repeat center;
 }
 header [class^="cmn-btn__lang"] {
     top: 7.73%;
@@ -56,8 +56,9 @@ main
 ============================================================*/
 /* visual
 ============================================================*/
-.vsl-area {
-    background: url("../images/common/visual-background.png");
+.vsl-area { /* 0702 zoe 수정 */
+    background: url("../images/common/visual-background.png") no-repeat center bottom;
+    background-size: cover;
 }
 .vsl-area [class^="cmn-btn__lang"] {
     top: 2.15%;
@@ -68,10 +69,8 @@ main
 .intro-area {
     background-color: #12483b;
 }
-.intro-area [class^="cmn-btn__"] {
-    top: 50.83%;
+.intro-area [class^="cmn-btn__"] { /* 0702 zoe 수정 */
     width: 34.1%;
-    height: 21%;
 }
 .cmn-btn__homepage {
     left: 15.18%;
@@ -79,16 +78,31 @@ main
 .cmn-btn__download {
     left: 50.36%;
 }
+
+.intro-area .lang-cont__kor [class^="cmn-btn__"] { /* 0702 zoe 추가 */
+    top: 50.83%;
+    height: 21%;
+}
+.intro-area .lang-cont__eng [class^="cmn-btn__"] { /* 0702 zoe 추가 */
+    top: 60.31%;
+    height: 17.64%;
+}
+
 /* content
 ============================================================*/
 .cont-area {
     padding: 7rem 0 6.5rem;
 }
-.cmn-btn__apply {
+.cmn-btn__apply { /* 0702 zoe 수정 */
     bottom: 0;
     left: 31.1%;
     width: 37.73%;
+}
+.lang-cont__kor .cmn-btn__apply { /* 0702 zoe 추가 */
     height: 2.4%;
+}
+.lang-cont__eng .cmn-btn__apply { /* 0702 zoe 추가 */
+    height: 1.73%;
 }
 [class^="tab-cont__"] {
     display: none;
